<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">


        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="Tìm kiếm bài hát"
            android:searchIcon="@drawable/ic_search"
            tools:iconifiedByDefault="false">

        </SearchView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="509dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002">

        <TextView
            android:id="@+id/txtLib"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="@string/thuvien"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/_tatcabaihat"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="ShowAllSong">

            <TextView
                android:id="@+id/txtMusicLib"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/ic_musiclib"
                android:drawableEnd="@drawable/ic_right"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/AllSong"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtYeuThich"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/ic_heart"
                android:drawableEnd="@drawable/ic_right"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/love"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAlbum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/ic_album"
                android:drawableEnd="@drawable/ic_right"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/album"

                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPlayList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/ic_playlist"
                android:drawableEnd="@drawable/ic_right"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/playlist"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCaSi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/ic_micro"
                android:drawableEnd="@drawable/ic_right"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/singer"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtScan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:drawableStart="@drawable/ic_scan"
                android:drawableEnd="@drawable/ic_right"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/scan"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="8dp"
        android:background="@drawable/gardientblacktran"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.78">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgPlayView"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:src="@drawable/img" />

        <LinearLayout
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="#F44336"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/singer"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:text="@string/singer"
                android:textColor="#F44336" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnPre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_pre"
            android:tint="#F44336" />

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_weight="1"
            android:background="@drawable/ic_play_new"
            android:tint="#F44336" />

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next"
            android:tint="#F44336" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>